--- a/style.css
+++ b/style.css
@@ -7,22 +7,20 @@
 body {
   background-color: #e5e5e5;
   font-family: "Noto Sans", sans-serif;
+  background-image: url(images/bg.png) ;
+
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
-  padding: 25px;
+  padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #46684a;
   top: 0;
   z-index: 100;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  border-radius: 20px;
 }
 
 body {
@@ -37,15 +35,8 @@ body {
   padding: 20px;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-}
-
 h1 {
-  color: #3a3a3a;
+color: white;
   font-size: 2.5rem;
 }
 
@@ -53,31 +44,40 @@ h1 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #4e54c8;
+  background-color: #38523b;
   color: white;
-  border: none;
+  border: 1px solid white;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(78, 84, 200, 0.3);
   transition:
     transform 0.3s ease,
     box-shadow 0.3s ease;
+    font-size: 50px;
+    
+}
+
+.add-task:hover{
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 
 .add-task:hover {
   transform: translateY(-5px) scale(1.05);
-  box-shadow: 0 6px 12px rgba(78, 84, 200, 0.5);
 }
 
 .add-task:hover::before {
   left: 100%;
 }
 
-.add-task i {
-  font-size: 16px;
-  font-style: normal;
-}
